<resources>
    <string name="app_name">NotiSort</string>

    <string name="help">存取權設定</string>
    <string name="sort">Survey</string>
    <string name="profile">資料設定</string>
    <string name="history">全部通知</string>
    <string name="sync">回傳資料</string>
    <string name="survey">點此開始填寫問卷</string>


    <string name="comapre_diff">請問造成兩種排列不同的原因為何?</string>
    <string name="additional">其他補充說明 (若有任何填寫上的困難，也請在此說明) </string>

    <string name="sync_time">上次回傳時間</string>
    <string name="sync_time_value">2020&#8211;00&#8211;00 00:00</string>

    <string name="done_title">三小時內是否完成問卷</string>
    <string name="done_bool">否</string>



    <string name="accessibility_service_description">Collect screen event</string>

    <string name="channelName">surveyRequest</string>
    <string name="channelDescription">Time to do survey!</string>
    <string name="channelID">20</string>

    <string name="channelNameOngoing">serviceForeground</string>
    <string name="channelDescriptionOngoing">NotiSort is running!</string>
    <string name="channelOngoingID">22</string>



    <string name="back">返回</string>
    <string name="go">go</string>
    <string name="next">繼續</string>
    <string name="finish">完成</string>
    <string name="done">確定</string>

    <string name="log">log</string>
    <string name="log_delete">清空log</string>

    <string name="yes">是</string>
    <string name="no">否</string>

    <string name="id">ID: </string>

    <string name="input_id">請輸入編號: </string>
    <string name="test">測試</string>

    <string name="displayOrder">請依<b>想處理</b>順序排名</string>
    <string name="viewOrder">請依<b>想看</b>程度排名</string>
    <string name="importanceOrder">請依<b>重要</b>程度排名</string>
    <string name="urgencyOrder">請依<b>緊急</b>程度排名</string>
    <string name="senderAttractivenessOrder">請依<b>傳送者吸引人</b>程度排名</string>
    <string name="contentAttractivenessOrder">請依<b>內容吸引人</b>程度排名</string>

    <string name="importance">重要程度</string>
    <string name="urgency">緊急程度</string>
    <string name="senderAttractiveness">傳送者吸引人程度</string>
    <string name="contentAttractiveness">內容吸引人程度</string>

    <string name="scale">請勾選以下問題</string>
    <string name="ESM">請回答以下問題</string>

    <string name="xcontinue">繼續</string>
    <string name="start">Start</string>
    <string name="close">Close</string>

    <string name="factor2">重要程度</string>
    <string name="factor3">緊急程度</string>
    <string name="factor1">內容吸引程度</string>
    <string name="factor0">\n傳送者吸引程度</string>
    <string name="factor4">app吸引程度</string>
    <string name="factor_text">您將此通知排在第 %d 位想要點擊通知的原因為？</string>
    <string name="factor_extra_text">補充說明</string>

    <string name="factor_not_attend">請問不用點擊的原因為何？(可複選)</string>
    <string name="not_attend_0">無需得知更多資訊</string>
    <string name="not_attend_1">點擊無作用</string>
    <string name="not_attend_2">其他</string>
    <string name="not_attend_3">對此內容無興趣</string>
    <string name="other_reason">請填寫原因</string>
    <string name="comfirm">確認</string>

    <string name="factor_not_display">請問不需要顯示的原因為何？(可複選)</string>
    <string name="not_display_0">重複出現</string>
    <string name="not_display_1">已得知此資訊</string>
    <string name="not_display_2">對此內容無興趣</string>

    <string name="stronglyDisagree">\n低</string>
    <string name="stronglyAgree">\n高</string>
    <string name="notApply">\n不適用</string>


    <string name="very_happy">非常開心 </string>
    <string name="happy">   開心   </string>
    <string name="neutral">   平平   </string>
    <string name="sad">稍微不開心</string>
    <string name="cry">非常不開心</string>
    <string name="angry">   生氣   </string>
    <string name="wtf">&#128565;生氣</string>

    <string name="textHint1">人數</string>


    <string name="sendCount">已收到問卷：</string>
    <string name="respondedCount">已回覆問卷：</string>
    <string name="finishedCount">已完成問卷：</string>

    <string name="notification_db">Notifications in database: </string>
    <string name="notification_lid">Largest ID: </string>
    <string name="notification_sid">Smallest ID: </string>

    <string name="notification_sync_limit">回傳數量限制 </string>
    <string name="ar_sync_limit">ARecog </string>
    <string name="nr_sync_limit">NRemove </string>
    <string name="refresh">Refresh</string>

    <string name="version">版本：notification sync</string>
</resources>
