<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factor_not_display"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/not_display_0"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:background="@drawable/not_check_small_round_button"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="3dp"
            android:text="@string/not_display_0"
            android:textSize="12sp" />

        <Button
            android:id="@+id/not_display_1"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:background="@drawable/not_check_small_round_button"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="3dp"
            android:text="@string/not_display_1"
            android:textSize="12sp" />

        <Button
            android:id="@+id/not_display_2"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:background="@drawable/not_check_small_round_button"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="3dp"
            android:text="@string/not_display_2"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>