<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light">

    <com.example.jefflin.notipreference.widgets.NoSwipeViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:elevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:text="@string/profile"
                android:textColor="@color/grey_dark"
                android:textSize="15sp" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/id" />

        <TextView
            android:id="@+id/profile_show_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:id="@+id/linear_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_id">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/input_id" />

        <EditText
            android:id="@+id/profile_edit_id"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:paddingTop="20dp" />

        <Button
            android:id="@+id/profile_id_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"/>

        <Button
            android:id="@+id/profile_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_input">
        <Button
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/log" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_input">
    </LinearLayout>


</RelativeLayout>