<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:elevation="2dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name"
                android:textSize="15sp"
                android:textColor="@color/grey_dark"
                android:background="@color/white"
                />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_backup_black_24dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="20dp"
        android:text="@string/sync"
        android:id="@+id/sync" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sync"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="-30dp"
        android:gravity="bottom"
        android:text="@string/sync_time"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_cloud_done_black_24dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bot_navigation_home"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:menu="@menu/bot_nav_home"
        app:itemTextColor="@color/colorPrimary"
        app:itemIconSize="30dp"
        />

</RelativeLayout>