<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/noti_item_scale"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:background="@color/white">


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:id="@+id/all"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                tools:visibility="visible"
                android:layout_margin="3dp"
                android:background="@color/white"/>
            <TextView
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textColor="@color/grey_medium"
                android:textSize="13sp"/>
            <TextView
                android:id="@+id/rank"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textColor="@color/black"
                android:textSize="13sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="13sp"
            android:textColor="@color/grey_medium"
            android:layout_marginBottom="5dp"/>


        <!--&lt;!&ndash;提示&ndash;&gt;-->
        <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_weight="1">-->

            <!--<View style="@style/Space" />-->

            <!--&lt;!&ndash;invisible for layout&ndash;&gt;-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="50dp"-->
                <!--android:gravity="center"-->
                <!--android:padding="2dp"-->
                <!--android:text="Importance"-->
                <!--android:textSize="13sp"-->
                <!--android:textColor="@color/white" />-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="50dp"-->
                <!--android:gravity="center"-->
                <!--android:padding="2dp"-->
                <!--android:text="Strongly \nDisagree"-->
                <!--android:textColor="@color/grey_medium"-->
                <!--android:textSize="8sp" />-->

            <!--<View style="@style/Space" />-->


            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="50dp"-->
                <!--android:gravity="center"-->
                <!--android:padding="2dp"-->
                <!--android:text="Strongly \nAgree"-->
                <!--android:textColor="@color/grey_medium"-->
                <!--android:textSize="8sp" />-->


        <!--</LinearLayout>-->


        <!--first factor-->
        <RadioGroup
            android:id="@+id/likert_scale0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/factor0"
                android:textColor="#000000" />

            <View
                style="@style/Space"
                android:layout_width="54dp" />

            <RadioButton
                android:id="@+id/strong_disagree0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stronglyDisagree"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:textSize="10sp"
                android:padding="2dp" />

            <RadioButton
                android:id="@+id/disagree0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:text="\n"
                android:textSize="10sp"
                android:padding="2dp" />

            <RadioButton
                android:id="@+id/neutral0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:text="\n"
                android:textSize="10sp"
                android:padding="2dp" />

            <RadioButton
                android:id="@+id/agree0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:text="\n"
                android:textSize="10sp"
                android:padding="2dp" />

            <RadioButton
                android:id="@+id/strong_agree0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stronglyAgree"
                android:textSize="10sp"
                android:button="@null"
                android:drawableBottom="@android:drawable/btn_radio"
                android:padding="2dp" />

            <View style="@style/Space" />


        </RadioGroup>

        <!--second factor-->
        <RadioGroup
        android:id="@+id/likert_scale1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/factor1"
                android:textColor="#000000" />

            <View
                style="@style/Space"
                android:layout_width="55dp" />

            <RadioButton
                android:id="@+id/strong_disagree1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@android:drawable/btn_radio"
                android:padding="2dp" />


                <RadioButton
                android:id="@+id/disagree1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@android:drawable/btn_radio"
                android:padding="2dp" />

                <RadioButton
                android:id="@+id/neutral1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@android:drawable/btn_radio"
                android:padding="2dp" />

                <RadioButton
                android:id="@+id/agree1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@android:drawable/btn_radio"
                android:padding="2dp" />

                <RadioButton
                android:id="@+id/strong_agree1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@android:drawable/btn_radio"
                android:padding="2dp" />

            <View style="@style/Space" />

        </RadioGroup>

        <!--third factor-->
        <RadioGroup
            android:id="@+id/likert_scale2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/factor2"
                android:textColor="#000000" />

            <View
                style="@style/Space"
                android:layout_width="25dp" />

            <RadioButton
                    android:id="@+id/strong_disagree2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                android:button="@android:drawable/btn_radio"
                android:padding="2dp" />

                <RadioButton
                    android:id="@+id/disagree2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:button="@android:drawable/btn_radio"
                    android:padding="2dp" />

                <RadioButton
                    android:id="@+id/neutral2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:button="@android:drawable/btn_radio"
                    android:padding="2dp" />

                <RadioButton
                    android:id="@+id/agree2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:button="@android:drawable/btn_radio"
                    android:padding="2dp" />

                <RadioButton
                    android:id="@+id/strong_agree2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:button="@android:drawable/btn_radio"
                    android:padding="2dp" />

            <View style="@style/Space" />

        </RadioGroup>

        <!--fourth factor-->
        <RadioGroup
            android:id="@+id/likert_scale3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/factor3"
                android:textColor="#000000" />

            <View
                style="@style/Space"
                android:layout_width="11dp" />

                <RadioButton
                    android:id="@+id/strong_disagree3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:button="@android:drawable/btn_radio"
                    android:padding="2dp" />

                <RadioButton
                    android:id="@+id/disagree3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:button="@android:drawable/btn_radio"
                    android:padding="2dp" />

                <RadioButton
                    android:id="@+id/neutral3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:button="@android:drawable/btn_radio"
                    android:padding="2dp" />

                <RadioButton
                    android:id="@+id/agree3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:button="@android:drawable/btn_radio"
                    android:padding="2dp" />

                <RadioButton
                    android:id="@+id/strong_agree3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:button="@android:drawable/btn_radio"
                    android:padding="2dp" />

            <View style="@style/Space" />

        </RadioGroup>

    </LinearLayout>


</RelativeLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text=""/>

</LinearLayout>
